--- a/tailwind-sandbox-done/06-layout-position/index.html
+++ b/tailwind-sandbox-done/06-layout-position/index.html
@@ -18,12 +18,12 @@
 
     <!-- Top left corner -->
     <div class="relative h-32 w-32 bg-yellow-100">
-      <div class="absolute left-0 top-0 h-16 w-16 bg-yellow-300">01</div>
+      <div class="absolute left-0 top-0 h-16 w-16 bg-green-300">01</div>
     </div>
 
     <!-- Top right corner -->
     <div class="relative h-32 w-32 bg-yellow-100">
-      <div class="absolute top-0 right-0 h-16 w-16 bg-yellow-300">03</div>
+      <div class="absolute top-0 right-0 h-16 w-16 bg-slate-300">03</div>
     </div>
 
     <!-- Bottom left corner -->
@@ -33,39 +33,40 @@
 
     <!-- Bottom right corner -->
     <div class="relative h-32 w-32 bg-yellow-100">
-      <div class="absolute bottom-0 right-0 h-16 w-16 bg-yellow-300">09</div>
+      <div class="absolute bottom-0 right-0 h-16 w-16 bg-orange-300">09</div>
     </div>
 
     <!-- Span top edge -->
     <div class="relative h-32 w-32 bg-yellow-100">
-      <div class="absolute inset-x-0 top-0 h-16 bg-yellow-300">02</div>
+      <div class="absolute inset-x-0 top-0 h-16 bg-blue-300">02</div>
     </div>
 
     <!-- Span left edge -->
     <div class="relative h-32 w-32 bg-yellow-100">
-      <div class="absolute inset-y-0 left-0 w-16 bg-yellow-300">04</div>
+      <div class="absolute inset-y-0 left-0 w-16 bg-cyan-300">04</div>
     </div>
 
     <!-- Span right edge -->
     <div class="relative h-32 w-32 bg-yellow-100">
-      <div class="absolute inset-y-0 right-0 w-16 bg-yellow-300">06</div>
+      <div class="absolute inset-y-0 right-0 w-16 bg-purple-300">06</div>
     </div>
 
     <!-- Span bottom edge -->
     <div class="relative h-32 w-32 bg-yellow-100">
-      <div class="absolute inset-x-0 bottom-0 h-16 bg-yellow-300">08</div>
+      <div class="absolute inset-x-0 bottom-0 h-16 bg-red-300">08</div>
     </div>
 
     <!-- Display Classes -->
     <div>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus
-      <span class="inline">This is display inline and will wrap normally</span
+      <span class="inline bg-cyan-300"
+        >This is display inline and will wrap normally</span
       >sapiente ut rerum esse ullam provident, fugit
-      <span class="inline-block"
+      <span class="inline-block bg-green-300"
         >This is display inline-block and will not extend beyond it's
         parent</span
-      >eos quam
-      <span class="block"
+      >
+      <span class="block font-bold bg-orange-300"
         >This is display block and will move to it's own line</span
       >
       reprehenderit est hic aut unde sequi, officia, ipsa amet doloribus
@@ -77,11 +78,11 @@
 
     <!-- Z-Index -->
     <div class="relative h-36">
-      <div class="absolute left-10 w-24 h-24 bg-blue-200 z-40">1</div>
-      <div class="absolute left-20 w-24 h-24 bg-blue-300">2</div>
-      <div class="absolute left-40 w-24 h-24 bg-blue-400 z-10">3</div>
-      <div class="absolute left-60 w-24 h-24 bg-blue-500 z-20">4</div>
-      <div class="absolute left-80 w-24 h-24 bg-blue-600">5</div>
+      <div class="absolute left-10 w-24 h-24 bg-red-200 z-40">red</div>
+      <div class="absolute left-20 w-24 h-24 bg-green-300">green</div>
+      <div class="absolute left-40 w-24 h-24 bg-blue-400 z-10">blue</div>
+      <div class="absolute left-60 w-24 h-24 bg-cyan-500 z-20">cyan</div>
+      <div class="absolute left-80 w-24 h-24 bg-yellow-400">yellow</div>
     </div>
 
     <!-- Floats -->
