--- a/tailwind-sandbox-done/11-breakpoints/index.html
+++ b/tailwind-sandbox-done/11-breakpoints/index.html
@@ -9,7 +9,7 @@
   </head>
   <!-- Tailwind is mobile-first -->
   <body
-    class="bg-black sm:bg-green-800 md:bg-blue-800 lg:bg-yellow-800 xl:bg-purple-800 2xl:bg-orange-800"
+    class="bg-black sm:bg-green-600 md:bg-blue-600 lg:bg-yellow-600 xl:bg-purple-800 2xl:bg-orange-600"
   >
     <h1 class="text-white text-xl md:text-3xl xl:text-5xl">
       Tailwind is awesome
@@ -20,12 +20,12 @@
         const width =
           window.innerWidth ||
           document.documentElement.clientWidth ||
-          document.body.clientWidth
+          document.body.clientWidth;
 
-        document.querySelector('h1').innerHTML = `Width: ${width}`
+        document.querySelector("h1").innerHTML = `Width: ${width}`;
       }
-      window.onload = showBrowserWidth
-      window.onresize = showBrowserWidth
+      window.onload = showBrowserWidth;
+      window.onresize = showBrowserWidth;
     </script>
   </body>
 </html>
