--- a/tailwind-sandbox-done/16-animation/index.html
+++ b/tailwind-sandbox-done/16-animation/index.html
@@ -10,25 +10,67 @@
         theme: {
           extend: {
             animation: {
-              'spin-slow': 'spin 3s linear infinite',
-              wiggle: 'wiggle 1s ease-in-out infinite',
+              "spin-slow": "spin 3s linear infinite",
+              wiggle: "wiggle 1s ease-in-out infinite",
             },
             keyframes: {
               wiggle: {
-                '0%, 100%': { transform: 'rotate(-12deg)' },
-                '50%': { transform: 'rotate(12deg)' },
+                "0%, 100%": { transform: "rotate(-12deg)" },
+                "50%": { transform: "rotate(12deg)" },
               },
             },
           },
         },
-      }
+      };
     </script>
     <title>Animation</title>
   </head>
   <body>
-    <div class="flex items-center justify-center min-h-screen bg-slate-900">
+    <div
+      class="flex items-center justify-center min-h-screen bg-slate-900 gap-10"
+    >
       <svg
         class="animate-wiggle w-48 text-white"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+      >
+        <circle
+          class="opacity-25"
+          cx="12"
+          cy="12"
+          r="10"
+          stroke="currentColor"
+          stroke-width="4"
+        ></circle>
+        <path
+          class="opacity-75"
+          fill="currentColor"
+          d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
+        ></path>
+      </svg>
+      <svg
+        class="animate-spin-slow w-48 text-white"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+      >
+        <circle
+          class="opacity-25"
+          cx="12"
+          cy="12"
+          r="10"
+          stroke="currentColor"
+          stroke-width="4"
+        ></circle>
+        <path
+          class="opacity-75"
+          fill="currentColor"
+          d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
+        ></path>
+      </svg>
+      <svg
+        class="animate-bounce w-48 text-white"
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
         viewBox="0 0 24 24"
