--- a/tailwind-sandbox-done/17-customization/index.html
+++ b/tailwind-sandbox-done/17-customization/index.html
@@ -9,30 +9,30 @@
       tailwind.config = {
         theme: {
           screens: {
-            sm: '550px',
-            md: '800px',
-            lg: '1200px',
-            xl: '1440px',
+            sm: "550px",
+            md: "800px",
+            lg: "1200px",
+            xl: "1440px",
           },
           fontFamily: {
-            sans: ['Graphik', 'sans-serif'],
-            serif: ['Merriweather', 'serif'],
+            sans: ["Graphik", "sans-serif"],
+            serif: ["Merriweather", "serif"],
           },
           extend: {
             colors: {
-              primary: '#ff5733',
-              secondary: '#fffc33',
+              primary: "#ff5733",
+              secondary: "#fffc33",
             },
             spacing: {
-              6: '2.5rem',
-              128: '32rem',
+              6: "2.5rem",
+              128: "32rem",
             },
             borderRadius: {
-              '4xl': '2rem',
+              "4xl": "2rem",
             },
           },
         },
-      }
+      };
     </script>
     <title>Customization</title>
   </head>
@@ -47,13 +47,13 @@
 
     <script>
       function showBrowserWidth() {
-        const width = window.innerWidth
+        const width = window.innerWidth;
 
-        document.querySelector('h1').innerHTML = `Width: ${width}`
+        document.querySelector("h1").innerHTML = `Width: ${width}`;
       }
 
-      window.onload = showBrowserWidth
-      window.onresize = showBrowserWidth
+      window.onload = showBrowserWidth;
+      window.onresize = showBrowserWidth;
     </script>
   </body>
 </html>
@@ -65,4 +65,3 @@
     xl	1280px	@media (min-width: 1280px) { ... }
     2xl	1536px	@media (min-width: 1536px) { ... }
   -->
-
