--- a/mini-projects/email-subscribe/original.html
+++ b/mini-projects/email-subscribe/original.html
@@ -8,7 +8,9 @@
     <title>Email Subscribe</title>
   </head>
   <body>
+    <!-- Background Container -->
     <div class="flex items-center justify-center h-screen bg-zinc-700">
+      <!-- Card -->
       <div class="bg-zinc-800 p-2 mx-6 rounded-2xl">
         <!-- Flex Container -->
         <div class="flex flex-col md:flex-row rounded-l-xl">
@@ -18,7 +20,6 @@
             alt=""
             class="object-fit rounded-xl h-80 md:h-64 md:rounded-l-xl md:rounded-r-none transform hover:scale-105 hover:rounded-xl duration-200"
           />
-
           <!-- Content -->
           <div class="p-6 md:p-12">
             <h2
@@ -33,6 +34,7 @@
               Eat better and exercise better. Sign up for the Diet&Fitness
               newsletter.
             </p>
+
             <div
               class="flex flex-col mt-5 space-y-4 md:space-x-3 md:flex-row md:space-y-0"
             >
@@ -41,10 +43,11 @@
                 placeholder="Enter your email address"
                 class="p-2 px-4 text-center text-white bg-zinc-800 border border-zinc-600 placeholder:text-xs placeholder:text-center md:text-left placeholder:md:text-left focus:outline-none"
               />
+
               <button
                 class="px-5 py-3 text-xs rounded-md text-zinc-800 bg-lime-500 hover:bg-lime-700 hover:text-white duration-500"
               >
-                Subscribe
+                Subcribe
               </button>
             </div>
           </div>
