--- a/mini-projects/image-gallery/original.html
+++ b/mini-projects/image-gallery/original.html
@@ -90,8 +90,8 @@
             >
               <div class="flex justify-between w-full">
                 <div class="font-normal">
-                  <p class="text-sm">Woman Makeup</p>
-                  <p class="text-xs">150 likes - 22 Shares</p>
+                  <p class="text-sm">Abstract Painting</p>
+                  <p class="text-xs">245 likes - 35 Shares</p>
                 </div>
                 <div class="flex items-center">
                   <img src="images/bookmark.svg" alt="bookmark" />
@@ -108,8 +108,8 @@
             >
               <div class="flex justify-between w-full">
                 <div class="font-normal">
-                  <p class="text-sm">Rustic Windows</p>
-                  <p class="text-xs">233 likes - 155 Shares</p>
+                  <p class="text-sm">Abstract Painting</p>
+                  <p class="text-xs">245 likes - 35 Shares</p>
                 </div>
                 <div class="flex items-center">
                   <img src="images/bookmark.svg" alt="bookmark" />
@@ -126,8 +126,8 @@
             >
               <div class="flex justify-between w-full">
                 <div class="font-normal">
-                  <p class="text-sm">Modern Roof</p>
-                  <p class="text-xs">345 likes - 80 Shares</p>
+                  <p class="text-sm">Abstract Painting</p>
+                  <p class="text-xs">245 likes - 35 Shares</p>
                 </div>
                 <div class="flex items-center">
                   <img src="images/bookmark.svg" alt="bookmark" />
@@ -145,7 +145,7 @@
               <div class="flex justify-between w-full">
                 <div class="font-normal">
                   <p class="text-sm">Abstract Painting</p>
-                  <p class="text-xs">1145 likes - 235 Shares</p>
+                  <p class="text-xs">245 likes - 35 Shares</p>
                 </div>
                 <div class="flex items-center">
                   <img src="images/bookmark.svg" alt="bookmark" />
@@ -162,8 +162,8 @@
             >
               <div class="flex justify-between w-full">
                 <div class="font-normal">
-                  <p class="text-sm">Highrise Buildings</p>
-                  <p class="text-xs">650 likes - 210 Shares</p>
+                  <p class="text-sm">Abstract Painting</p>
+                  <p class="text-xs">245 likes - 35 Shares</p>
                 </div>
                 <div class="flex items-center">
                   <img src="images/bookmark.svg" alt="bookmark" />
@@ -180,8 +180,8 @@
             >
               <div class="flex justify-between w-full">
                 <div class="font-normal">
-                  <p class="text-sm">Stone Wall</p>
-                  <p class="text-xs">125 likes - 10 Shares</p>
+                  <p class="text-sm">Abstract Painting</p>
+                  <p class="text-xs">245 likes - 35 Shares</p>
                 </div>
                 <div class="flex items-center">
                   <img src="images/bookmark.svg" alt="bookmark" />
