--- a/website-projects/clipboard/original.html
+++ b/website-projects/clipboard/original.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,7 +12,7 @@
     />
 
     <link rel="stylesheet" href="css/style.css" />
-    <title>Tailwind Clipboard</title>
+    <title>Clipboard Website</title>
   </head>
   <body>
     <!-- Hero Section -->
@@ -30,13 +31,15 @@
         <div class="button-container">
           <a
             href="#"
-            class="p-4 px-8 rounded-full shadown-lg bg-strongCyan duration-200 hover:opacity-80"
-            >Download for iOS
+            class="p-4 px-8 rounded-full shadow-lg bg-strongCyan duration-200 hover:opacity-80"
+          >
+            Download for iOS
           </a>
           <a
             href="#"
-            class="p-4 px-8 rounded-full shadown-lg bg-lightBlue duration-200 hover:opacity-80"
-            >Download for Mac
+            class="p-4 px-8 rounded-full shadow-lg bg-lightBlue duration-200 hover:opacity-80"
+          >
+            Download for Mac
           </a>
         </div>
       </div>
