--- a/website-projects/loopstudios/original.html
+++ b/website-projects/loopstudios/original.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,7 +12,7 @@
     />
     <script src="js/script.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
-    <title>Loop Studios</title>
+    <title>Simple Tailwind Starter</title>
   </head>
   <body>
     <!-- Hero Section -->
@@ -27,31 +28,31 @@
             <div class="group">
               <a href="#">About</a>
               <div
-                class="mx-2 group-hover:border-b group-hover:border-pink-300"
+                class="mx-2 group-hover:border-b group-hover:border-blue-50"
               ></div>
             </div>
             <div class="group">
               <a href="#">Careers</a>
               <div
-                class="mx-2 group-hover:border-b group-hover:border-pink-300"
+                class="mx-2 group-hover:border-b group-hover:border-blue-50"
               ></div>
             </div>
             <div class="group">
               <a href="#">Events</a>
               <div
-                class="mx-2 group-hover:border-b group-hover:border-pink-300"
+                class="mx-2 group-hover:border-b group-hover:border-blue-50"
               ></div>
             </div>
             <div class="group">
               <a href="#">Products</a>
               <div
-                class="mx-2 group-hover:border-b group-hover:border-pink-300"
+                class="mx-2 group-hover:border-b group-hover:border-blue-50"
               ></div>
             </div>
             <div class="group">
               <a href="#">Support</a>
               <div
-                class="mx-2 group-hover:border-b group-hover:border-pink-300"
+                class="mx-2 group-hover:border-b group-hover:border-blue-50"
               ></div>
             </div>
           </div>
@@ -100,7 +101,7 @@
 
         <!-- Text Container -->
         <div
-          class="pr-0 bg-white md:absolute md:right-0 md:py-20 md:pl-20 md:top-48"
+          class="top-48 pr-0 bg-white md:absolute md:right-0 md:py-20 md:pl-20"
         >
           <h2
             class="max-w-lg mt-10 mb-6 font-sans text-4xl text-center text-gray-900 uppercase md:text-5xl md:mt-0 md:text-left"
@@ -302,5 +303,105 @@
         </div>
       </div>
     </section>
+
+    <footer class="bg-black">
+      <!-- Container -->
+      <div class="container max-w-6xl py-10 mx-auto">
+        <!-- Footer Flex Container -->
+        <div
+          class="flex flex-col items-center mb-8 space-y-6 md:flex-row md:space-y-0 md:justify-between md:items-start"
+        >
+          <!-- Menu & Logo Container -->
+          <div
+            class="flex flex-col items-center space-y-8 md:items-start md:space-y-4"
+          >
+            <!-- Logo -->
+            <div class="h-8">
+              <img src="images/logo.svg" alt="" class="w-44 md:ml-3" />
+            </div>
+            <!-- Menu Container -->
+            <div
+              class="flex flex-col items-center space-y-4 font-bold text-white md:flex-row md:space-y-0 md:space-x-6 md:ml-3"
+            >
+              <!-- Item 1 -->
+              <div class="h-10 group">
+                <a href="#">About</a>
+                <div
+                  class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                ></div>
+              </div>
+              <!-- Item 2 -->
+              <div class="h-10 group">
+                <a href="#">Careers</a>
+                <div
+                  class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                ></div>
+              </div>
+              <!-- Item 3 -->
+              <div class="h-10 group">
+                <a href="#">Events</a>
+                <div
+                  class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                ></div>
+              </div>
+              <!-- Item 4 -->
+              <div class="h-10 group">
+                <a href="#">Products</a>
+                <div
+                  class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                ></div>
+              </div>
+              <!-- Item 5 -->
+              <div class="h-10 group">
+                <a href="#">Support</a>
+                <div
+                  class="mx-2 group-hover:border-b group-hover:border-blue-50"
+                ></div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Social & Copy Container -->
+          <div
+            class="flex flex-col items-start justify-between space-y-4 text-gray-500"
+          >
+            <!-- icons Container -->
+            <div
+              class="flex items-center justify-center mx-auto space-x-4 md:justify-end md:mx-0"
+            >
+              <!-- Icon 1 -->
+              <div class="h-8 group">
+                <a href="#">
+                  <img src="images/icon-facebook.svg" alt="" class="h-6" />
+                </a>
+              </div>
+              <!-- Icon 2 -->
+              <div class="h-8 group">
+                <a href="#">
+                  <img src="images/icon-twitter.svg" alt="" class="h-6" />
+                </a>
+              </div>
+              <!-- Icon 3 -->
+              <div class="h-8 group">
+                <a href="#">
+                  <img src="images/icon-pinterest.svg" alt="" class="h-6" />
+                </a>
+              </div>
+              <!-- Icon 4 -->
+              <div class="h-8 group">
+                <a href="#">
+                  <img src="images/icon-instagram.svg" alt="" class="h-6" />
+                </a>
+              </div>
+            </div>
+
+            <!-- Copy -->
+            <div class="font-bold">
+              &copy; 2022 Loopstudios. All Rights Reserved
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
