fixed tailwind styling

--- a/website-projects/shortly/index.html
+++ b/website-projects/shortly/index.html
@@ -29,27 +29,21 @@
           <!-- Logo -->
           <img src="images/logo.svg" alt="" />
           <!-- Left Menu -->
-          <div class="hidden space-x-8 font-bold lg:flex">
-            <a href="#" class="text-grayishViolet hover:text-veryDarkViolet"
-              >Features</a
-            >
-            <a href="#" class="text-grayishViolet hover:text-veryDarkViolet"
-              >Pricing</a
-            >
-            <a href="#" class="text-grayishViolet hover:text-veryDarkViolet"
-              >Resources</a
-            >
+          <div class="hidden space-x-8 font-semibold lg:flex">
+            <a href="#" class="text-slate-500 hover:text-cyan">Features</a>
+            <a href="#" class="text-slate-500 hover:text-cyan">Pricing</a>
+            <a href="#" class="text-slate-500 hover:text-cyan">Resources</a>
           </div>
         </div>
 
         <!-- Right Buttons Menu -->
-        <div
-          class="hidden items-center space-x-6 font-bold text-grayishViolet lg:flex"
-        >
-          <div class="hover:text-veryDarkViolet">Login</div>
+        <div class="hidden items-center space-x-6 font-semibold lg:flex">
+          <a href="#" class="font-semibold text-slate-500 hover:text-cyan"
+            >Login</a
+          >
           <a
             href="#"
-            class="px-8 py-3 font-bold text-white bg-cyan rounded-full hover:opacity-70"
+            class="px-8 py-3 font-semibold text-white bg-cyan rounded-full hover:opacity-70"
             >Sign Up</a
           >
         </div>
@@ -74,13 +68,17 @@
         <div
           class="flex flex-col items-center justify-center w-full space-y-6 font-bold text-white rounded-sm"
         >
-          <a href="#" class="w-full text-center">Features</a>
-          <a href="#" class="w-full text-center">Pricing</a>
-          <a href="#" class="w-full text-center">Resources</a>
-          <a href="#" class="w-full pt-6 border-t border-gray-400 text-center"
+          <a href="#" class="w-full text-center hover:text-cyan">Features</a>
+          <a href="#" class="w-full text-center hover:text-cyan">Pricing</a>
+          <a href="#" class="w-full text-center hover:text-cyan">Resources</a>
+          <a
+            href="#"
+            class="w-full pt-6 border-t border-gray-400 text-center hover:text-cyan"
             >Login</a
           >
-          <a href="#" class="w-full py-3 text-center rounded-full bg-cyan"
+          <a
+            href="#"
+            class="w-full py-3 text-center rounded-full bg-cyan hover:bg-cyanLight"
             >Sign Up</a
           >
         </div>
@@ -223,7 +221,7 @@
     </section>
 
     <!-- Feature Box Section -->
-    <section id="features" class="pb-32 bg-gray-100">
+    <section id="features" class="pb-32 bg-gray-200">
       <div
         class="relative container flex flex-col items-start px-6 mx-auto md:flex-row md:space-x-7"
       >
@@ -317,7 +315,7 @@
           Boost your links today
         </h5>
         <button
-          class="px-10 py-5 mx-auto text-2xl font-bold text-white rounded-full bg-cyan hover:bg-cyanLlight md:text-base md:py-3 focus:outline-none"
+          class="px-10 py-5 mx-auto text-2xl font-bold text-white rounded-full bg-cyan hover:bg-cyanLight md:text-base md:py-3 focus:outline-none"
         >
           Get Started
         </button>
