--- a/website-projects/fylo/index.html
+++ b/website-projects/fylo/index.html
@@ -14,13 +14,13 @@
     <script>
       // https://www.freecodecamp.org/news/how-to-build-a-dark-mode-switcher-with-tailwind-css-and-flowbite
       if (
-        localStorage.getItem('color-theme') === 'dark' ||
-        (!('color-theme' in localStorage) &&
-          window.matchMedia('(prefers-color-scheme: dark)').matches)
+        localStorage.getItem("color-theme") === "dark" ||
+        (!("color-theme" in localStorage) &&
+          window.matchMedia("(prefers-color-scheme: dark)").matches)
       ) {
-        document.documentElement.classList.add('dark')
+        document.documentElement.classList.add("dark");
       } else {
-        document.documentElement.classList.remove('dark')
+        document.documentElement.classList.remove("dark");
       }
     </script>
     <script src="js/script.js" defer></script>
@@ -43,7 +43,7 @@
         <!-- Dark/Light Mode Button -->
         <button
           id="theme-toggle"
-          class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2 5"
+          class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5"
         >
           <!-- Dark SVG Icon -->
           <svg
@@ -82,7 +82,7 @@
     >
       <!-- Hero Container -->
       <div class="container mx-auto px-6 text-center md:pt-20 pb-52">
-        <img src="images/illustration-intro.png" alt="" class="mx-auto" />
+        <!-- <img src="images/illustration-intro.png" alt="" class="mx-auto" /> -->
         <h1
           class="max-w-2xl mx-auto mb-10 text-3xl font-bold leading-normal mt-14 md:text-4xl"
         >
@@ -93,7 +93,9 @@
           Access them wherever you need, share and collaborate with friends
           family, and co-workers.
         </p>
-        <button class="p-3 rounded-full w-52 bg-accentCyan hover:scale-95">
+        <button
+          class="p-3 rounded-full w-52 bg-accentCyan font-semibold hover:scale-95 dark:text-slate-500"
+        >
           Get Started
         </button>
       </div>
@@ -134,7 +136,7 @@
 
         <!-- Second Row -->
         <div
-          class="flex flex-col space-y-24 mt-28 text-center md:flex-row md:space-y-0"
+          class="flex flex-col space-y-24 mt-24 text-center md:flex-row md:space-y-0"
         >
           <!-- Item 3 -->
           <div class="flex flex-col items-center space-y-2 md:w-1/2">
@@ -310,13 +312,13 @@
           <div class="w-full md:flex-1">
             <input
               type="text"
-              class="w-full px-10 py-3 rounded-full focus:outline-none"
+              class="w-full px-10 py-3 rounded-full focus:outline-none text-slate-600"
               placeholder="email@example.com"
             />
           </div>
 
           <button
-            class="w-full p-3 px-6 rounded-full bg-accentCyan md:w-56 hover:scale-95"
+            class="w-full p-3 px-6 rounded-full bg-accentCyan md:w-56 hover:scale-95 font-semibold dark:text-slate-500"
           >
             Get Started For Free
           </button>
